src/test/ui/arg-count-mismatch.rs
// error-pattern: arguments were supplied

fn f(x: isize) { }

fn main() { let i: (); i = f(); }
